

------
v6.1.8
------

[mms] SECURITY: Fix XSS in displaying user-defined flags in basic mailbox and
      message view.
[mms] SECURITY: Fix XSS in displaying user-defined flags in dynamic mailbox
      view (João Machado <geral@jpaulo.eu>).
[mms] SECURITY: Fix XSS in displaying mailbox name in dynamic mailbox view
      (João Machado <geral@jpaulo.eu>).
[jan] Update Korean translation (Deokgon Kim <dgkim@dgkim.net>).


------
v6.1.7
------

[mms] Add Save All link to the popup message page in dynamic view.
[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[mms] Cleaner handling of broken S/MIME signed messages.
[mms] Fix displaying user-defined message headers when multiple-headers exist
      in a single message.
[mjr] Honor recurrence-id range values when deleting recurring events (Bug
      #12746).
[mms] Don't provide links to view attachments in compose screen unless the
      attachment can be displayed (Bug #12841).


------
v6.1.6
------

[mms] Fix regression where auto-saved drafts were not being deleted when
      cancelling compose message in dynamic view.
[mms] Fix regression in parsing permission values (Bug #12812).
[mms] Fix regression in showing non-available actions in dynamic mailbox view
      when ACL rules prevent them (Bug #12808).


------
v6.1.5
------

[mms] SECURITY: Fix XSS in message and search screens resulting from a
      user-defined flag label (João Machado <geral@jpaulo.eu>).
[mms] Support uploading multiple attachments at once in dynamic view.
[mms] Send linked attachment download notification message in language of the
      sending user (Bug #12783).
[mms] Fix populating search fields when editing an advanced search query.
[mms] Trigger auto save draft in dynamic view if attachments have changed.
[mms] Improved UI for dropping attachments on dynamic compose screen.
[mms] Fix manually loading all addresses in a header.
[mms] Fix regression where reloading dynamic view would not load the previously