@@ -3564,6 +3564,7 @@
 * [mms] SECURITY: Fix XSS in displaying user-defined flags in basic mailbox and message view.
 * [mms] SECURITY: Fix XSS in displaying user-defined flags in dynamic mailbox view (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] SECURITY: Fix XSS in displaying mailbox name in dynamic mailbox view (João Machado &lt;geral@jpaulo.eu&gt;).
+* [mms] Better handling of malformed message dates in mailbox listing (Bug #13114).
 * [jan] Update Korean translation (Deokgon Kim &lt;dgkim@dgkim.net&gt;).
    </notes>
   </release>
