@@ -76,6 +76,8 @@ v6.1.8
       view (João Machado <geral@jpaulo.eu>).
 [mms] SECURITY: Fix XSS in displaying mailbox name in dynamic mailbox view
       (João Machado <geral@jpaulo.eu>).
+[mms] Better handling of malformed message dates in mailbox listing (Bug
+      #13114).
 [jan] Update Korean translation (Deokgon Kim <dgkim@dgkim.net>).
 
 
